--- a/src/app/todo/todo-list/todo-list.component.html
+++ b/src/app/todo/todo-list/todo-list.component.html
@@ -1,3 +1,7 @@
-<div class="todo-list">
-  <app-todo-item></app-todo-item>
-</div>
+<ul class="list-group">
+  <app-todo-item
+    *ngFor="let todo of todos"
+    (onDeleteTodo)="onDeleteTodo($event)"
+    [todo]="todo">
+  </app-todo-item>
+</ul>
